# newmac

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  bootstrap.sh  catalog.toml  get.sh  install  nuke.sh  update.sh
.github/workflows/: ci.yml  pages.yml  release.yml  rust.yml
config/: aliases.zsh  starship.toml  tmux.conf  zshrc
config/aerospace/: aerospace.toml
config/borders/: bordersrc
config/ghostty/: config
config/karabiner/: karabiner.json
config/rio/: config.toml
config/sketchybar/: sketchybarrc
config/sketchybar/plugins/: aerospace.sh  battery.sh
config/themes/: catppuccin.sh  gruvbox.sh  kanagawa.sh  nord.sh  rosepine.sh  tokyonight.sh
docs/: CATALOG.md  EXPECTED-STATE.md  GUIDE.md  ROADMAP.md
flavours/: ai.toml  basic.toml  jack.toml  rice.toml  webdev.toml
scripts/: build-ui.sh  catalog.sh  configure.sh  dock.sh  docs.sh  doctor.sh  get-ui.sh  install.sh  keys.sh  lib.sh  macos-defaults.sh  power.sh  presets.sh  ricing.sh  schedule-updates.sh  status.sh  theme.sh  tour.sh  tui.sh  uninstall.sh
site/: index.html
ui/: Cargo.toml  README.md  justfile
ui/crates/newmac-core/: Cargo.toml  brew_popular.json  build.rs  themes.toml
ui/crates/newmac-core/src/: brew.rs  catalog.rs  flavour.rs  lib.rs  search.rs  selection.rs  theme.rs
ui/crates/newmac-core/tests/: core.rs
ui/crates/newmac-tui/: Cargo.toml
ui/crates/newmac-tui/examples/: preview.rs
ui/crates/newmac-tui/src/: app.rs  gensh.rs  lib.rs  main.rs  ui.rs
ui/crates/newmac-tui/tests/: app_logic.rs  mouse.rs  render.rs
